force-app/main/default/objects/Success_Resource_Pod_Association__c.object
<CustomObject>
    <fields>
        <fullName>Success_Resource__c</fullName>
        <description>The success resource that is being associated to a success pod</description>
        <label>Success Resource</label>
        <referenceTo>Success_Resource__c</referenceTo>
        <relationshipLabel>Success Resource Pod Associations</relationshipLabel>
        <relationshipName>Success_Resource_Pod_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Alias__c</fullName>
        <formula>Success_Resource__r.Resource__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User's Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>Success_Resource__r.Resource_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User's Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Pod__c</fullName>
        <description>The success pod to associate a resource to.</description>
        <label>Success Pod</label>
        <referenceTo>Success_Pod__c</referenceTo>
        <relationshipLabel>Success Resource Pod Associations</relationshipLabel>
        <relationshipName>Success_Resource_Pod_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Creates a Many-To-Many relationship between Success_Resource__c and Success_Pod__c.</description>
    <label>Success Resource Pod Association</label>
    <nameField>
        <displayFormat>SRPA-{0000000000}</displayFormat>
        <label>Success Resource Pod Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Resource Pod Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Advisor</fullName>
        <active>true</active>
        <label>Advisor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coach</fullName>
        <active>false</active>
        <label>Coach</label>
    </recordTypes>
</CustomObject>